--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         
         #title {
-            font-size: 60px;
+            font-size: 50px;
             margin-left: 25%;
         }
         
@@ -70,7 +70,9 @@
 	<body>	    
 	    <h1 class="text" id="title">What Colour is it Today?</h1>
         <select id="country2" name="country2" onchange="countryChanged()"></select>
-        <h3 class="text">Note: Timezones & Weather Information may not be accurate</h3>
+        <h3 class="text">Note: Timezones & Weather Information may not be accurate
+        <br> <a href="https://github.com/quarbby/colours-time">View on Github :)</a>
+        </h3>
 
 	    <div class="container">
     	    <div id="timeBox">
